# fib-sphere-rust

./: Cargo.toml
src/: main.rs  packing.rs  sweeping_iterator.rs
